--- a/templates/faq/faq.html
+++ b/templates/faq/faq.html
@@ -11,6 +11,7 @@
     <script src="{{ url_for('static', path='js/main/logo.js') }}" defer></script>
     <link rel="stylesheet" href="{{ url_for('static', path='css/main/hamberger.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', path='css/main/logo.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='css/main/pcVer.css') }}">
     <link href='https://fonts.googleapis.com/css?family=Prata' rel='stylesheet'>
 </head>
 <body>
@@ -85,5 +86,28 @@
             </div>
         </section>
     </div>
+
+    <div id="pcVer">
+        <div id="piestaInfo" class="introContainer">
+            <div id="introLogo">
+                <img src="{{ url_for('static', path='images/GNU_PIESTA_logo.svg')}}" alt="logo">
+            </div>
+            <div id="introContentContainer">
+                <div class="intro">PIONEER & FESTA</div>
+                <div class="intro">2024 대동제; PIESTA</div>
+                <div class="intro">2024.10.16 WED ~ 10.18 FRI</div>
+            </div>
+            <div id="qrContainer">
+                <div id="QRimg" class="qr">
+                    <img src="{{ url_for('static', path='images/piesta_QR.jpg')}}" id="QR">
+                </div>
+                <div class="qr">QR로 웹사이트 바로가기</div>
+            </div>
+        </div>
+  
+        <div id="piestaPoster" class="introContainer">
+            <img src="{{ url_for('static', path='images/PIESTA_poster.jpeg')}}" id="poster">
+        </div>
+      </div>
 </body>
 </html>
