--- a/templates/booth/booth_detail.html
+++ b/templates/booth/booth_detail.html
@@ -36,7 +36,7 @@
       src="{{ url_for('static', path='js/main/logo.js') }}"
       defer
     ></script>
-
+    <link rel="stylesheet" href="{{ url_for('static', path='css/main/pcVer.css') }}">
     <title>2024 GNU FIESTA</title>
   </head>
   <body>
