--- a/static/css/main/pcVer.css
+++ b/static/css/main/pcVer.css
@@ -88,4 +88,14 @@
         height: 100%;
         width: 100%;
     }
+
+    .starCanvas {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1; 
+        pointer-events: none; 
+    }    
 }
