--- a/static/css/timetable/timetable.css
+++ b/static/css/timetable/timetable.css
@@ -1,6 +1,15 @@
 
 /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ휴대폰 */
 @media (max-width: 767px) {
+  .closeButton {
+    position: fixed;
+    top: 1px; 
+    right: 20px; 
+    color: #BCBCBC;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+  }
   @font-face {
     font-weight: 400; /* 폰트의 두께 */
     font-family: 'Felixti'; /* 폰트 이름 */
@@ -260,6 +269,9 @@
     overflow-y: auto;
     -ms-overflow-style: none;
   }
+  .popup-right::-webkit-scrollbar{
+    display:none;
+  }
 
   /*.popup-right::-webkit-scrollbar {
     width: 5px;
@@ -313,6 +325,15 @@
 
  /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ여기서부턴 큰화면  */
  @media (min-width: 768px) and (max-width: 1024px) {
+  .closeButton {
+    position: fixed;
+    top: 1px; 
+    right: 20px; 
+    color: #BCBCBC;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+  }
 
   @font-face {
     font-weight: 400; /* 폰트의 두께 */
