--- a/templates/timetable/timetable.html
+++ b/templates/timetable/timetable.html
@@ -219,7 +219,7 @@
       </div>
       <div class="popup-right">
         <span id="popup-detail"></span>
-        <!-- <span class="close-btn" onclick="closePopup()">&times;</span> -->
+        <span class="closeButton" onclick="closeModal()">&times;</span>
       </div>
     </div>
   </div>
