--- a/templates/timetable/timetable.html
+++ b/templates/timetable/timetable.html
@@ -15,6 +15,7 @@
   <script src="{{ url_for('static', path='js/timetable/timetable.js') }}" defer></script>
   <script src="{{ url_for('static', path='js/main/hamberger.js') }}" defer></script>
   <script src="{{ url_for('static', path='js/main/logo.js') }}" defer></script>
+  <script src="{{ url_for('static', path='js/main/stars.js') }}" defer></script>
 </head>
 
   <body>
@@ -51,7 +52,7 @@
   </div>
   <!-- ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ 로고 및 햄버거 -->
   <div class="mainpage">
-
+    <canvas class="starCanvas"></canvas>
     <header class="header">
       <h1>Time Table</h1>
     </header>
