--- a/static/css/booth/booth_detail.css
+++ b/static/css/booth/booth_detail.css
@@ -19,26 +19,14 @@ font-face {
     font-weight: normal;
     font-style: normal;
 }
-/* PIESTA LOGO */
-/* #logoImg img
-{
-    width: 100%;
-}
-#logoImg {
+.starCanvas {
     position: fixed;
-    width: 60vw;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: opacity 0.3s ease-in-out, visibility 0s 0.3s;
-  }
-  .logoDate {
-    text-align: center;
-    font-family: "Pretendard-Regular";
-    color: #afafaf;
-    font-size: 2.5vw;
-    letter-spacing: 0.5vw;
-  } */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}  
 .logo p
 {
     color: #AFAFAF;
