--- a/static/css/booth/booth_list.css
+++ b/static/css/booth/booth_list.css
@@ -75,6 +75,14 @@ body {
 }
 /* 모바일 디바이스에서 적용되는 css -> 가로 해상도가 1024px(아이패드 프로) 보다 작은 화면에 적용  */
 @media (max-width: 767px) {
+  .starCanvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}  
   /* 제목 BOOTH */
   .title {
     font-family: "Felixti";
@@ -161,6 +169,14 @@ body {
 
 /* PC에서 적용되는 css -> 가로 해상도가 1025px 보다 작은 화면에 적용  */
 @media (min-width: 768px) {
+  .starCanvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}  
   #hambuger {
     left: 82%;
     top: 4%;
