--- a/static/css/main/home_page3.css
+++ b/static/css/main/home_page3.css
@@ -25,12 +25,12 @@ body {
     cursor: pointer;
 }
   .starCanvas {
-    position: fixed; /* 스크롤해도 항상 고정된 위치 */
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    pointer-events: none; /* 클릭 등의 이벤트가 canvas에 적용되지 않도록 설정 */
+    pointer-events: none;
 }  
   #home_poster,
   #home_lineup,
@@ -296,6 +296,23 @@ body {
 
 /* 태블릿 사이즈 */
 @media (min-width: 768px) and (max-width: 1024px) {
+  .closeButton {
+    position: absolute;
+    top: 10px; 
+    right: 20px; 
+    color: #aaa;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+  .starCanvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}  
   #home_poster,
   #home_lineup,
   #home_info {
