--- a/templates/comment/comment.html
+++ b/templates/comment/comment.html
@@ -24,11 +24,16 @@
       defer
     ></script>
     <script
+    src="{{ url_for('static', path='js/main/stars.js') }}"
+    defer
+  ></script>
+    <script
       src="{{ url_for('static', path='js/main/hamberger.js') }}"
       defer
     ></script>
   </head>
   <body>
+    <canvas class="starCanvas"></canvas>
     <div class="content">
       <!-- 로고 -->
       <div>
