--- a/templates/faq/faq.html
+++ b/templates/faq/faq.html
@@ -13,53 +13,57 @@
     <link rel="stylesheet" href="{{ url_for('static', path='css/main/logo.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', path='css/main/pcVer.css') }}">
     <link href='https://fonts.googleapis.com/css?family=Prata' rel='stylesheet'>
+    <script src="{{ url_for('static', path='js/main/stars.js') }}" defer></script>
 </head>
 <body>
     <div class="container">
-    <!-- 로고 -->
-     <header id="header">
-        <div>
-            <div id="logoImg">
-                <img src="{{ url_for('static', path='images/GNU_PIESTA_logo.svg')}}" alt="logo">
-                <p class="logoDate">2024.10.16.WED ~ 10.18.FRI</p>
+        <!-- 로고 -->
+        <canvas class="starCanvas"></canvas>
+        <header id="header">
+            <div>
+                <div id="logoImg">
+                    <img src="{{ url_for('static', path='images/GNU_PIESTA_logo.svg')}}" alt="logo">
+                    <p class="logoDate">2024.10.16.WED ~ 10.18.FRI</p>
+                </div>
             </div>
-        </div>
 
-        <!-- 햄버거 버튼 -->
-        <a class="menu-trigger" href="#">
-            <span class="hambergerBread"></span>
-            <span class="hambergerCenter"></span>
-            <span class="hambergerBread"></span>
-        </a>
-        <div id="hambergerContents" class="hambergerContents">
-            <div id="navContainer">
-                <div id="hrefHOME" data-url="/home">HOME</div>
-                <div id="hrefTIMETABLE" data-url="/timetable">TIMETABLE</div>
-                <div id="hrefBOOTH" data-url="/booth/list">BOOTH</div>
-                <div id="hrefCOMMENT" data-url="/comment">COMMENT</div>
-                <div id="hrefFAQ" data-url="/faq">FAQ</div>
+            <!-- 햄버거 버튼 -->
+            <a class="menu-trigger" href="#">
+                <span class="hambergerBread"></span>
+                <span class="hambergerCenter"></span>
+                <span class="hambergerBread"></span>
+            </a>
+            <div id="hambergerContents" class="hambergerContents">
+                <div id="navContainer">
+                    <div id="hrefHOME" data-url="/home">HOME</div>
+                    <div id="hrefTIMETABLE" data-url="/timetable">TIMETABLE</div>
+                    <div id="hrefBOOTH" data-url="/booth/list">BOOTH</div>
+                    <div id="hrefCOMMENT" data-url="/comment">COMMENT</div>
+                    <div id="hrefFAQ" data-url="/faq">FAQ</div>
+                </div>
+                <div id="piestaWebHost">
+                    <a id="ohgam" href="https://www.instagram.com/gnu_5gam/">오감 총학생회</a>
+                    &nbsp;X&nbsp;
+                    <a id="mutsa" href="https://www.instagram.com/likelion_gnu/">멋쟁이사자처럼</a>
+                </div>
             </div>
-            <div id="piestaWebHost">
-                <a id="ohgam" href="https://www.instagram.com/gnu_5gam/">오감 총학생회</a>
-                &nbsp;X&nbsp;
-                <a id="mutsa" href="https://www.instagram.com/likelion_gnu/">멋쟁이사자처럼</a>
-            </div>
+        </header>
+            <h2 class="FAQ">FAQ</h2>
+            <section class="faq-section" id="faqSection">
+                <ul>
+                    {% for faq in faqAll %}
+                    <li class="faq-item">
+                        <div class="faq-question" onclick="toggleAnswer('{{ loop.index }}')">Q{{ loop.index }}. {{ faq.question }}</div>
+                        <div class="faq-answer" id="answer-{{ loop.index }}" style="max-height: 0; opacity: 0; overflow: hidden; transition: max-height 0.3s ease, opacity 0.3s ease;">
+                            {{ faq.answer }}
+                        </div>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </section>
         </div>
-     </header>
-        <h2 class="FAQ">FAQ</h2>
-        <section class="faq-section" id="faqSection">
-            <ul>
-                {% for faq in faqAll %}
-                <li class="faq-item">
-                    <div class="faq-question" onclick="toggleAnswer('{{ loop.index }}')">Q{{ loop.index }}. {{ faq.question }}</div>
-                    <div class="faq-answer" id="answer-{{ loop.index }}" style="max-height: 0; opacity: 0; overflow: hidden; transition: max-height 0.3s ease, opacity 0.3s ease;">
-                        {{ faq.answer }}
-                    </div>
-                </li>
-                {% endfor %}
-            </ul>
-        </section>
     </div>
+
 
     <div id="pcVer">
         <div id="piestaInfo" class="introContainer">
@@ -78,10 +82,10 @@
                 <div class="qr">QR로 웹사이트 바로가기</div>
             </div>
         </div>
-  
+
         <div id="piestaPoster" class="introContainer">
             <img src="{{ url_for('static', path='images/PIESTA_poster.jpeg')}}" id="poster">
         </div>
-      </div>
+    </div>
 </body>
 </html>
