--- a/static/css/faq/faq.css
+++ b/static/css/faq/faq.css
@@ -188,6 +188,7 @@
         /* padding: 15px; */
         padding: 0 3vw;
         width: 60vw;
+        height: 10vw;
     }    
 
     .faq-question {
