--- a/static/css/booth/booth_list.css
+++ b/static/css/booth/booth_list.css
@@ -86,7 +86,6 @@ body {
     color: #ffffff;
   }
 
-  
   /* 지도 영역 */
   #map {
     width: 90vw;
@@ -131,6 +130,7 @@ body {
     display: flex; /* 수평 정렬을 위한 flexbox 사용 */
     align-items: center; /* 아이콘과 텍스트를 수직으로 정렬 */
     height: 15vw;
+    justify-content: space-between;
   }
   .box-title {
     font-weight: bold;
@@ -157,6 +157,10 @@ body {
     margin: 0 auto;
     margin-top: 7.5vw;
   }
+  .heart {
+    margin-left: 10vw;
+    margin-top: 3vw;
+  }
 }
 
 /* PC에서 적용되는 css -> 가로 해상도가 1025px 보다 작은 화면에 적용  */
@@ -178,7 +182,7 @@ body {
     position: relative; /* 다른 요소들과 겹치지 않게 상대 위치 */
     color: #ffffff;
   }
-  
+
   /* 지도 영역 */
   #map {
     width: 90vw;
@@ -194,6 +198,7 @@ body {
     align-self: center;
     flex-direction: column; /* 제목과 설명을 세로로 배치 */
     margin-left: 5vw;
+    flex: 1;
   }
   /* 박스 목록 */
   .box-container {
@@ -223,6 +228,7 @@ body {
     display: flex; /* 수평 정렬을 위한 flexbox 사용 */
     align-items: center; /* 아이콘과 텍스트를 수직으로 정렬 */
     height: 15vw;
+    justify-content: space-between;
   }
   .box-title {
     font-weight: bold;
@@ -249,6 +255,10 @@ body {
     margin: 0 auto;
     margin-top: 7.5vw;
   }
+  .heart {
+    margin-left: 10vw;
+    margin-top: 3vw;
+  }
 }
 
 img.close-img {
@@ -256,10 +266,10 @@ img.close-img {
   height: auto; /* 필요에 따라 height도 설정 */
 }
 
-
-
 @media (min-width: 1025px) {
-  #booth_info, .title, .content_box {
+  #booth_info,
+  .title,
+  .content_box {
     display: none;
   }
 }
