--- a/templates/faq/postFAQ.html
+++ b/templates/faq/postFAQ.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <link rel="stylesheet" href="{{ url_for('static', path='css/faq/postFAQ.css') }}"> -->
+    <link rel="stylesheet" href="{{ url_for('static', path='css/faq/postFAQ.css') }}">
     <script>
             const correctPassword = "{{ password }}";
     </script>
