--- a/static/css/booth/booth_list.css
+++ b/static/css/booth/booth_list.css
@@ -82,7 +82,7 @@ body {
     width: 100%;
     height: 100%;
     pointer-events: none;
-}  
+  }
   /* 제목 BOOTH */
   .title {
     font-family: "Felixti";
@@ -165,6 +165,7 @@ body {
     margin: 0 auto;
     margin-top: 7.5vw;
   }
+
   .heart {
     margin-left: 10vw;
     margin-top: 3vw;
@@ -172,7 +173,7 @@ body {
 }
 
 /* PC에서 적용되는 css -> 가로 해상도가 1025px 보다 작은 화면에 적용  */
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 1025px) {
   .starCanvas {
     position: fixed;
     top: 0;
@@ -180,7 +181,7 @@ body {
     width: 100%;
     height: 100%;
     pointer-events: none;
-}  
+  }
   #hambuger {
     left: 82%;
     top: 4%;
@@ -266,14 +267,28 @@ body {
     left: 85%; /* 좌측에서 10px 떨어짐 */
   }
   .filter-buttons {
-    height: 5vw;
+    height: 3vw;
     width: 65vw;
     margin: 0 auto;
     margin-top: 7.5vw;
   }
+  .filter-buttons label {
+    font-family: "Felixti";
+    padding: 0.3rem 0.5rem;
+    size: 1.5rem;
+    color: white;
+    border-radius: 50%;
+    box-shadow: 0rem 0rem 0.5rem 0.5rem #3b2862;
+    background-color: #3b2862;
+    border-radius: 20px;
+    margin: 0 0.1vw -2vw 0.1vw;
+    cursor: pointer;
+    font-size: 2.5vw;
+  }
   .heart {
     margin-left: 10vw;
     margin-top: 3vw;
+    width: 7vw;
   }
 }
 
@@ -282,7 +297,7 @@ img.close-img {
   height: auto; /* 필요에 따라 height도 설정 */
 }
 
-@media (min-width: 1025px) {
+@media (min-width: 1026px) {
   #booth_info,
   .title,
   .content_box {
