--- a/static/css/booth/booth_detail.css
+++ b/static/css/booth/booth_detail.css
@@ -50,6 +50,7 @@ font-face {
     display: inline-block;
     padding-right: 2.8vw;
     color: #9F8BEE;
+    font-family: "Pretendard";
 }
 
 .menu_box
@@ -84,6 +85,7 @@ font-face {
     color: #282828;
     /* border-bottom:1.7px solid #ADADAD; */
     padding-bottom: 1.0vw !important;
+    font-family: "Pretendard";
 }
 .content_box
 {
@@ -134,6 +136,7 @@ font-face {
     font-size: 3.05vw;
     font-weight: 500;
     line-height: 1.6; 
+    font-family: "Pretendard";
 }
 
 .fa-instagram
@@ -273,6 +276,7 @@ font-face {
     .booth_detail p 
     {
         font-size: 3.05vw;
+        font-family: "Pretendard";
     }
  
 
@@ -332,12 +336,14 @@ font-face {
     .booth_detail h4
     {
         font-size: 3.8vw;
+        font-family: "Pretendard";
     }
 
     .booth_detail p
     {
         line-height: 2;
         font-size: 2.8vw;
+        font-family: "Pretendard";
     }
     .content_box>div
     {
