--- a/static/css/comment/comment.css
+++ b/static/css/comment/comment.css
@@ -78,6 +78,7 @@ font-face {
     border-radius: 0px 30px 30px 30px;
     margin-bottom: 10px;
     background: linear-gradient(to bottom, #f0f0f0, #ffc8c8);
+    font-family: "Pretendard";
   }
 
   .name {
@@ -105,6 +106,8 @@ font-face {
     height: 7vh;
     margin: 0;
     border-radius: 15px;
+    font-family: "Pretendard";
+    padding: 5px 10px;
   }
   button {
     background-color: #ededed;
@@ -127,8 +130,9 @@ font-face {
     width: 75vw;
     background-color: #6b6592;
     color: white;
-    font-weight: 200;
+    font-weight: 400;
     font-size: 15px;
+    font-family: "Pretendard";
   }
   .notice {
     position: fixed;
@@ -216,8 +220,8 @@ font-face {
     flex: 1;
     /* margin-right: 10px; */
     border-radius: 15px;
-    padding-top: 5px;
-    padding-left: 2px;
+    padding: 5px 10px;
+    font-family: "Pretendard";
   }
   
   button:hover {
@@ -252,6 +256,7 @@ font-face {
     border-radius: 0px 30px 30px 30px;
     margin-bottom: 10px;
     background: linear-gradient(to bottom, #f0f0f0, #ffc8c8);
+    font-family: "Pretendard";
   }
 
   .name {
@@ -293,7 +298,8 @@ font-face {
     background-color: #6b6592;
     color: white;
     font-size: 20px;
-    font-weight: 100;
+    font-weight: 400;
+    font-family: "Pretendard";
   }
   .notice {
     left: 9%;
