--- a/static/css/main/home_page3.css
+++ b/static/css/main/home_page3.css
@@ -77,6 +77,7 @@ body {
     -webkit-text-fill-color: transparent;
     color: transparent;
     text-shadow: 0px 2px 4px rgba(255, 226, 188, 0.5);
+    font-family: "Pretendard";
   }
 
   /* 공지사항 리스트 */
@@ -109,6 +110,7 @@ body {
     text-overflow: ellipsis;
     white-space: nowrap;
     color: #ffffff;
+    font-family: "Pretendard";
   }
 
   .noticeTitle {
@@ -118,6 +120,7 @@ body {
     text-overflow: ellipsis;
     white-space: nowrap;
     color: #ffffff;
+    font-family: "Pretendard";
   }
 
   .noticeBody {
@@ -130,6 +133,7 @@ body {
     -webkit-line-clamp: 2;
     line-clamp: 2;
     white-space: normal;
+    font-family: "Pretendard";
   }
 
   /* 오시는 길 */
@@ -155,6 +159,7 @@ body {
     padding: 20px;
     color: white;
     font-size: 1.2em;
+    font-family: "Pretendard";
   }
 
   #leftArrow,
@@ -199,6 +204,7 @@ body {
     display: inline-block;
     min-width: 10vw;
     color: #ffffff;
+    font-family: "Pretendard";
   }
 
   .busInfoContainer > div span:last-child {
@@ -241,6 +247,7 @@ body {
     font-size: 1.4em;
     font-weight: bold;
     margin-bottom: 2.5vh;
+    font-family: "Pretendard";
   }
 
   #noticeModalBody {
@@ -248,6 +255,7 @@ body {
     color: #6d6d6d;
     max-height: 30vh;
     overflow: scroll;
+    font-family: "Pretendard";
   }
     
   #noticeModalBody::-webkit-scrollbar {
@@ -256,6 +264,7 @@ body {
 
   .busModalTitle {
     margin-bottom: 1em;
+    font-family: "Pretendard";
   }
   .busModalTitle > div {
     color: #58437c;
@@ -294,6 +303,7 @@ body {
   #busCompany {
     color: #221959;
     font-weight: bold;
+    font-family: "Pretendard";
   }
 
   .blur-background {
@@ -358,6 +368,7 @@ body {
     -webkit-text-fill-color: transparent;
     color: transparent;
     text-shadow: 0px 2px 4px rgba(255, 226, 188, 0.5);
+    font-family: "Pretendard";
   }
 
   /* 공지사항 리스트 */
@@ -367,6 +378,7 @@ body {
     margin: 1vw 8vw;
     height: 10vh;
     scrollbar-width: none;
+    font-family: "Pretendard";
   }
 
   #noticeList::-webkit-scrollbar {
@@ -390,6 +402,7 @@ body {
     text-overflow: ellipsis;
     white-space: nowrap;
     color: #ffffff;
+    font-family: "Pretendard";
   }
 
   .noticeTitle {
@@ -399,6 +412,7 @@ body {
     text-overflow: ellipsis;
     white-space: nowrap;
     color: #ffffff;
+    font-family: "Pretendard";
   }
 
   .noticeBody {
@@ -411,6 +425,7 @@ body {
     -webkit-line-clamp: 2;
     line-clamp: 2;
     white-space: normal;
+    font-family: "Pretendard";
   }
 
   /* 오시는 길 */
@@ -436,6 +451,7 @@ body {
     padding: 20px;
     color: white;
     font-size: 1.6em;
+    font-family: "Pretendard";
   }
 
   #leftArrow,
@@ -482,6 +498,7 @@ body {
     min-width: 10vw;
     color: #ffffff;
     font-size: 1.2em;
+    font-family: "Pretendard";
   }
 
   .busInfoContainer > div span:last-child {
