--- a/templates/timetable/timetable.html
+++ b/templates/timetable/timetable.html
@@ -109,11 +109,15 @@
             <span class="event-time">18:30 ~ 20:00</span>
 
           </div>
-          <div class="event" id="day1" style="grid-row: 11 / 13;"
-            onclick="showPopup(1, '개회식', '20:00 ~ 20:40', '20:00 개회식,20:30 불꽃놀이')">
+          <div class="event" id="day1" style="grid-row: 11 / 12;"
+            onclick="showPopup(1, '개회식&불꽃놀이', '20:00 ~ 20:30', '20:00 개회식&불꽃놀이')">
             개회식 & 불꽃놀이
-            <span class="event-time">20:00 ~ 20:40</span> 
-
+            <span class="event-time">20:00 ~ 20:30:</span> 
+          </div>
+          <div class="event" id="day1" style="grid-row: 12 / 13;"
+          onclick="showPopup(1, '사회자 이벤트', '20:30 ~ 21:00', '')">
+          사회자 이벤트
+            <span class="event-time">20:30 ~ 21:00</span> 
           </div>
           <div class="event" id="day1" style="grid-row: 13 / 15;"
             onclick="showPopup(1, '연예인 축하 공연', '21:00 ~ 22:00', '10/16(수),,21:00 로이킴,21:30 볼사')">
